--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	compile 'org.springframework:spring-webmvc'
 	compile 'javax.servlet:jstl:1.2'
 	compile 'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.1'
+	compile 'org.hibernate:hibernate-validator:6.0.10.Final'
 	def junitVersion = '5.0.3'
     testCompile 'org.junit.jupiter:junit-jupiter-api:' + junitVersion
     testCompile 'org.junit.jupiter:junit-jupiter-engine:' + junitVersion
